--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/tensorflow"]
 	path = submodules/tensorflow
 	url = https://github.com/tensorflow/tensorflow.git
+[submodule "submodules/googletest"]
+	path = submodules/googletest
+	url = https://github.com/google/googletest.git
